--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('./styles/reset.css');
 @import url('./styles/header.css');
 @import url('./styles/home.css');
+@import url('./styles/about.css');
 @import url('./styles/footer.css');
 
 
